# mass-survivor

./: Cargo.toml  README.md
.cargo/: config.toml
assets-templates/: PinkSelector01.aseprite  RedSelector01.aseprite
itch.io/: index.html  package.sh
src/: animations.rs  assets.rs  enemies.rs  ennemies.rs  game_collision.rs  game_sprites.rs  helper.rs  input.rs  main.rs  timer.rs
