[package]
name = "mass-survivor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/main.rs"

[dependencies]
benimator = "2.0.1"
bevy = "0.6.1"
bevy_asset_loader = { version = "0.8.0", features = ["render"] }
bevy_tweening = "0.3.1"
heron = { version = "2.0.0", features = ["2d"] }
ordered-float = "2.10.0"
rand = "0.8.4"
wasm-bindgen = "0.2.79"

[features]
debug-2d = ["heron/debug-2d"]

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
