[package]
name = "mass-survivor"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.8.0"
bevy_asset_loader = { version = "0.12.1", features = ["2d"] }
bevy_asset_loader_derive = { version = "0.12.1", features = ["2d"] }
bevy_editor_pls = "0.1.1"
bevy_utils = "0.8.0"
heron = { version = "4.0.0", features = ["2d", "debug-2d"] }
rand = "0.8.5"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
